--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,300i,400,500,500i,600,600i,700,700i,800,800i" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400i,600,600i,700,700i" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    <link rel='stylesheet' href='https://highlightjs.org/static/demo/styles/railscasts.css'/>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
